# TestOwl

./: .env.example  .gitignore  =0.40.0  PRODUCT_POSITIONING.md  PROJECT_STRUCTURE.md  README.md  check_health.bat  create_server.py  deploy.bat  main.py  mcp_server.py  mcp_server.py.bak  mcp_server_broken.py  mcp_server_sse.py  mcp_server_sse.py.bak  mcp_upload_files.py  nohup.out  pyproject.toml  requirements.txt  server.py  setup_project.py  start_mcp.bat  start_server.py  start_web.bat  start_web.ps1  start_web.sh  test_refactored.py  test_token_optimizer_simple.py  upload_knowledge_base.py  upload_代码检查规范汇总.md.b64.txt  upload_性能测试知识汇总.md.b64.txt  upload_数据库测试知识汇总.md.b64.txt  upload_白盒测试基础知识汇总.md.b64.txt  upload_知识库资料汇总.md.b64.txt  web_api.py  修复说明.md
config/: config.yaml.example
docs/: DEEPSEEK_DEV_GUIDE.md  DEVELOPMENT_GUIDE.md  FOR_DEEPSEEK.md  TOKEN_OPTIMIZER_README.md
examples/: basic_usage.py  db_checker_example.py
knowledge_base/: 代码检查规范汇总.md  多端互通游戏知识汇总.md  性能测试知识汇总.md  捉宠游戏测试经验汇总.md  接口测试知识汇总.md  数据库测试知识汇总.md  白盒测试基础知识汇总.md  知识库资料汇总.md  配置表检查规则汇总.md
scripts/: check_health.py  deploy.sh  diagnose.py  mcp_server.py  update_server.bat  verify_code.py
src/: __init__.py
src/adapters/: __init__.py
src/adapters/document/: __init__.py  parser.py
src/adapters/llm/: __init__.py  client.py
src/adapters/platform/: __init__.py  base.py  jira.py  redmine.py  tapd.py  zentao.py
src/adapters/storage/: __init__.py  base.py  excel_exporter.py  xmind_exporter.py
src/core/: __init__.py  agent.py  bug_analyzer.py  config.py  data_masking.py  exceptions.py  table_checker.py  token_optimizer.py
src/quality/: __init__.py  engine.py  retry.py  validator.py
src/quality/validators/: __init__.py  bug_tracker.py  document_analysis.py  semantic.py  syntax.py  table_check.py
src/services/: __init__.py  knowledge_service.py
src/skills/: __init__.py  base.py  base.py.bak
src/skills/bug_tracker/: __init__.py  models.py  skill.py
src/skills/db_checker/: README.md  __init__.py  skill.py
src/skills/db_checker/connectors/: __init__.py  base.py  factory.py  mysql.py  postgres.py  sqlite.py
src/skills/db_checker/rules/: __init__.py  base.py  rpg_rules.py
src/skills/document_analyzer/: __init__.py  models.py  skill.py
src/skills/table_checker/: __init__.py  skill.py
src/skills/test_case_generator/: __init__.py  models.py  models.py.bak.1775643447  models.py.bak.20260408_182122  skill.py  skill.py.bak  skill_with_quality.py
src/utils/: __init__.py  logger.py
tests/: test_token_optimizer.py
uploads/: .gitkeep
web/: api.py  api.py.bak4  api.py.bak5  api.py.bak8  chat_handler.py  index.html  index.html.bak  index.html.bak11  index.html.bak2  index.html.bak3  index.html.bak9  index_new.html
