[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testowl"
version = "1.0.0"
description = "游戏测试智能助手 - 基于MCP的测试辅助工具"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TestOwl Team"}
]
keywords = ["testing", "game", "qa", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心依赖
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Web API服务
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # MCP协议支持
    "mcp>=1.0.0",
    "starlette>=0.40.0",
    # 大模型API
    "openai>=1.0.0",
    "httpx>=0.25.0",
    # 文档解析
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    # 数据处理和表检查
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "numpy>=1.24.0",
    # 测试用例导出
    "XlsxWriter>=3.1.0",
    # 数据库支持
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    # 项目管理平台API
    "jira>=3.5.0",
    # 工具库
    "typing-extensions>=4.8.0",
    "aiohttp>=3.9.0",
    # 日志和调试
    "loguru>=0.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
xmind = [
    "xmind>=1.2.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/TestOwl-QA/TestOwl"
Documentation = "https://github.com/TestOwl-QA/TestOwl/blob/main/README.md"
Repository = "https://github.com/TestOwl-QA/TestOwl"

[project.scripts]
testowl = "src.core.agent:main"
testowl-server = "scripts.mcp_server:main"
testowl-web = "web.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "web*", "config*", "scripts*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"config" = ["*.yaml", "*.yaml.example"]
"web" = ["*.html", "*.ico", "*.png"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | uploads
  | output
  | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
